--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ruby on Rails Tutorial Sample App</title>
+	<title>Ruby on Rails Tutorial Sample App | Home</title>
 </head>
 <body>
 <h1>Pages#home</h1>
